--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Keith A Brady
+description: Cybersecurity Portfolio
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-
+show_downloads: true
