--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Keith A Brady
-description: Cybersecurity Portfolio
+title: [Keith Brady's Portfolio of Projects]
+description: [Portfolio of past,current and future projects related to Cybersecurity and Data Analytics] 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-show_downloads: true
+show_downloads: false
