--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: [Keith Brady's Portfolio of Projects]
-description: [Portfolio of past,current and future projects related to Cybersecurity and Data Analytics] 
+title: Keith Brady's Portfolio of Projects
+description: [Portfolio of my projects related to Cybersecurity and Data Analytics] 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
