--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Keith Brady's Portfolio of Projects
+name: Keith Brady's Cybersecurity Portfolio
+title: null
 description: [Portfolio of my projects related to Cybersecurity and Data Analytics] 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
