--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-name: Keith Brady's Cybersecurity Portfolio
-title: null
+title: [Keith Brady's Cybersecurity Portfolio]
 description: [Portfolio of my projects related to Cybersecurity and Data Analytics] 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
